# cosmic-pulsar

./: .gitignore  Cargo.toml  README.md
resources/svg/: source.md
src/: app.rs  lib.rs  main.rs  page.rs  player.rs  song.rs  song_library.rs  structure.md
src/page/: albums_page.rs  artists_page.rs  files_page.rs
